src/test/ui/derives/derives-span-PartialOrd-enum.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-enum.rs:9:6
   |
LL | #[derive(PartialOrd,PartialEq)]
   |          ---------- in this derive macro expansion
...
LL |      Error
   |      ^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: this error originates in the derive macro `PartialOrd` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
